Fix button alignment in Top Posts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,6 +14,10 @@ main>div{
   margin: 0 5px;
 }
 
+.footer-flex{
+  display: flex;
+}
+
 a{
   text-decoration: none;
   color: white;
